# quizzical

./: .dockerignore  Cargo.toml  README.md  app.json  heroku.yml  license-template  rocket.toml  rustfmt.toml
.github/workflows/: docker.yml  rust.yml
quiz/: Cargo.toml  Dockerfile
src/: main.rs
src/api/: mod.rs
src/db/: mod.rs
src/service/: teams.rs
zical/: Cargo.toml  Dockerfile  Rocket.toml
zical/migrations/2020-04-15-162144_create_teams/: up.sql
zical/src/: lib.rs  main.rs  teams.rs
zical/src/api/: mod.rs  teams.rs
zical/src/db/: mod.rs  models.rs  schema.patch  schema.rs
zical/src/service/: mod.rs
