[package]
name = "zical"
version = "0.1.0"
authors = ["Søren Mortensen <soren@neros.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"

publish = false

description = "Backend web server for running virtual pub quizzes."
homepage = "https://github.com/nerosnm/zical"
repository = "https://github.com/nerosnm/zical"
readme = "README.md"

[[bin]]
name = "zical"
path = "src/main.rs"

[dependencies]
diesel_migrations = "^1.4"
log = "^0.4"
rocket = "^0.4"

[dependencies.diesel]
version = "^1.4"
features = ["postgres"]

[dependencies.rocket_contrib]
version = "^0.4"
default_features = false
features = ["diesel_postgres_pool", "json"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]
